Clean list and map copy